# pseudoscript

./: .gitignore  .releaserc.json  CLAUDE.md  Cargo.toml  LANG.md  PATTERNS.md  README.md  pseudoscript.pds  release-plz.toml
.claude/: launch.json  settings.json
.run/: Install.run.xml
CONFORMANCE/: README.md
crates/pseudoscript/: CHANGELOG.md  Cargo.toml  build.rs
crates/pseudoscript-doc/: CHANGELOG.md  Cargo.toml  build.rs
crates/pseudoscript-doc-svelte/: Cargo.toml  build.rs
crates/pseudoscript-doc-svelte/examples/: smoke.rs
crates/pseudoscript-doc-svelte/src/: lib.rs  props.rs  render.rs  renderer.rs  shell.rs
crates/pseudoscript-doc-svelte/src/assets/: client.js  ssr.js  style.css
crates/pseudoscript-doc-svelte/tests/: site.rs
crates/pseudoscript-doc-svelte/tests/features/: site.feature
crates/pseudoscript-doc-svelte/web/: build.mjs  package-lock.json  package.json
crates/pseudoscript-doc-svelte/web/src/: entry.client.js  entry.server.js  style.css
crates/pseudoscript-doc-svelte/web/src/lib/: FlowTimeline.svelte  ModuleContent.svelte  NodeSection.svelte  Page.svelte  Sidebar.svelte  TreeNode.svelte  behaviors.js
crates/pseudoscript-doc/examples/: smoke.rs
crates/pseudoscript-doc/src/: assets.rs  config.rs  diag.rs  escape.rs  health.rs  highlight.rs  lib.rs  nav.rs  props.rs  render.rs  render_md.rs  search.rs  shell.rs  site.rs  url.rs
crates/pseudoscript-doc/src/assets/: app.js  client.js  ssr.js  style.css
crates/pseudoscript-doc/tests/: markdown.rs  site.rs
crates/pseudoscript-doc/tests/features/: site.feature
crates/pseudoscript-doc/web/: build.mjs  package-lock.json  package.json
crates/pseudoscript-doc/web/src/: entry.client.js  entry.universe.js  style.css
crates/pseudoscript-doc/web/src/lib/: Breadcrumbs.svelte  C4Flow.svelte  Diagram.svelte  DocContent.svelte  FlowTimeline.svelte  Footer.svelte  Header.svelte  HealthBadge.svelte  HealthContent.svelte  IndexContent.svelte  ModuleContent.svelte  NodeSection.svelte  Page.svelte  Relationships.svelte  Scenarios.svelte  SequenceLifeline.svelte  Sidebar.svelte  SvgFigure.svelte  TreeNode.svelte  UniverseContent.svelte  behaviors.js
crates/pseudoscript-doc/web/src/universe/: graph-route.js  island.js
crates/pseudoscript-emit/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-emit/src/: c4_render.rs  lib.rs  project.rs  render.rs  scene.rs
crates/pseudoscript-emit/tests/: conformance.rs
crates/pseudoscript-emit/tests/features/: conformance.feature  svg.feature
crates/pseudoscript-format/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-format/src/: lib.rs  printer.rs
crates/pseudoscript-format/tests/: format.rs
crates/pseudoscript-format/tests/features/: comments.feature  golden.feature  idempotency.feature  semantics.feature
crates/pseudoscript-ide/: CHANGELOG.md  Cargo.toml  README.md
crates/pseudoscript-ide/src/: lib.rs
crates/pseudoscript-ide/tests/: completion_adversarial.rs  hover_adversarial.rs
crates/pseudoscript-layout/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-layout/src/: geom.rs  lib.rs  text.rs
crates/pseudoscript-layout/src/c4/: mod.rs
crates/pseudoscript-layout/src/flowchart/: mod.rs
crates/pseudoscript-layout/src/sequence/: diagram.rs  layout.rs  mod.rs
crates/pseudoscript-layout/tests/: acceptance.rs
crates/pseudoscript-layout/tests/features/: sequence.feature
crates/pseudoscript-lsp/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-lsp-core/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-lsp-core/src/: analysis.rs  complete.rs  convert.rs  infer.rs  lib.rs  refs.rs  semantic.rs  symbols.rs
crates/pseudoscript-lsp/src/: analysis.rs  complete.rs  convert.rs  lib.rs  refs.rs  resolve.rs  semantic.rs  server.rs  symbols.rs  workspace.rs
crates/pseudoscript-lsp/tests/: lsp.rs
crates/pseudoscript-lsp/tests/features/: cursor.feature  diagnostics.feature  formatting.feature  handshake.feature  semantic_tokens.feature
crates/pseudoscript-model/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-model/src/: check.rs  complete.rs  deps.rs  fold.rs  graph.rs  infer.rs  lib.rs  model.rs  resolve.rs  semantic.rs
crates/pseudoscript-model/src/check/: architecture.rs  cross_module.rs  result_flow.rs
crates/pseudoscript-model/tests/: conformance.rs
crates/pseudoscript-model/tests/features/: argument_types.feature  call_arity.feature  conditions.feature  cross_module.feature  for_loops.feature  graph.feature  member_access.feature  member_calls.feature  references.feature  reserved_words.feature  rules.feature  self_calls.feature  static.feature  suggestions.feature  type_checking.feature
crates/pseudoscript-project/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-project/src/: deps.rs  fs.rs  lib.rs
crates/pseudoscript-syntax/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-syntax/src/: ast.rs  diagnostic.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/pseudoscript-syntax/tests/: conformance.rs
crates/pseudoscript-syntax/tests/features/: lexical.feature  syntax.feature
crates/pseudoscript-universe/: CHANGELOG.md  Cargo.toml
crates/pseudoscript-universe/src/: flows.rs  lib.rs  model_adapter.rs  personality.rs  snapshot.rs
crates/pseudoscript-wasm/: CHANGELOG.md  Cargo.toml  README.md
crates/pseudoscript-wasm/src/: lib.rs
crates/pseudoscript/src/: deps.rs  main.rs  monorepo.rs  upgrade.rs  workspace.rs
crates/pseudoscript/tests/: cli.rs  deps.rs  eval.rs  model_conformance.rs  monorepo.rs
crates/pseudoscript/tests/features/: check.feature  doc.feature  fmt.feature  init.feature  lang.feature  lsp.feature  outline.feature  svg.feature  tokens.feature
crates/pseudoscript/tests/fixtures/broken/: app.pds  pds.toml
crates/pseudoscript/tests/fixtures/ws/: pds.toml
crates/pseudoscript/tests/fixtures/ws/banking/: core.pds  events.pds
decisions/: 001-result-only-no-option.md  002-immutable-bindings.md  003-no-construction-result-markers.md  004-self-calls.md  005-dropped-result-allowed.md  006-union-variants.md  007-full-chaining.md  008-no-optionality-marker.md  009-doc-paragraph-delimiter.md  013-literals.md  (+33 more)
(+763 files in other folders)
