[package]
name = "pseudoscript-doc-svelte"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_doc_svelte"
path = "src/lib.rs"

[dependencies]
pseudoscript-model = { path = "../pseudoscript-model" }
pseudoscript-emit = { path = "../pseudoscript-emit" }
pseudoscript-doc = { path = "../pseudoscript-doc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The embedded QuickJS engine is native-only: rquickjs vendors and compiles
# QuickJS C (needs a C compiler), which does not build for wasm targets. A wasm
# host implements `SsrEngine` against its own JS engine instead, so this dep is
# gated out there. Pinned exactly — the eval/call API is version-sensitive.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rquickjs = "=0.12.0"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "site"
harness = false
