[package]
name = "pseudoscript-emit"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_emit"
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
pseudoscript-model = { path = "../pseudoscript-model" }
serde = { version = "1", features = ["derive"] }
layout-rs = "0.1.3"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "conformance"
harness = false
