[package]
name = "pseudoscript-emit"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_emit"
path = "src/lib.rs"

[dependencies]
# Logging facade (target-agnostic); the subscriber is chosen at the wasm/stdio edge.
tracing = "0.1"
pseudoscript-syntax = { path = "../pseudoscript-syntax", version = "0.2.0" }
pseudoscript-model = { path = "../pseudoscript-model", version = "0.2.0" }
pseudoscript-layout = { path = "../pseudoscript-layout", version = "0.2.0" }
pseudoscript-dot = { path = "../pseudoscript-dot", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "conformance"
harness = false
