[package]
name = "pseudoscript-ide"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_ide"
# `cdylib` is the single browser wasm artifact (`--target web` + wasm-bindgen);
# `rlib` keeps it a normal Rust dependency so the workspace builds/tests it on
# the host.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax", version = "0.2.0" }
pseudoscript-format = { path = "../pseudoscript-format", version = "0.2.0" }
pseudoscript-model = { path = "../pseudoscript-model", version = "0.2.0" }
pseudoscript-lsp-core = { path = "../pseudoscript-lsp-core", version = "0.2.0" }
pseudoscript-emit = { path = "../pseudoscript-emit", version = "0.2.0" }
pseudoscript-doc = { path = "../pseudoscript-doc", version = "0.2.0" }
# The 3D "software universe" layout — pure, wasm-safe, permissive. Builds the whole
# universe (positions + planet personalities) the in-app WebGL view renders.
pseudoscript-universe = { path = "../pseudoscript-universe", version = "0.2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Parses a `pds.toml` string into the doc manifest for the host (`doc_manifest`).
# Pure Rust — the same parser the native CLI uses — so it builds for wasm.
toml = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
# Typed wasm boundary (napi-rs-style): the Rust DTOs are the source of truth,
# `tsify` emits the real TS interfaces, values cross as objects not JSON strings.
# The render-IR `Scene` is the one exception — an opaque JSON passthrough the
# canvas reads structurally, so it stays a `String`.
tsify-next = { version = "0.5", default-features = false, features = ["js"] }
# The logging facade — target-agnostic. Core code emits `tracing` events; the
# subscriber that routes them is chosen at the wasm edge (below).
tracing = "0.1"

# Wasm-only edges: browser-grade panic messages, the `tracing` subscriber that
# forwards events to the browser console (→ Vite `forwardConsole` → terminal),
# and `performance.now()` for coarse per-query timing on the log events.
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
tracing-wasm = "0.2"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
