[package]
name = "pseudoscript-layout"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_layout"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"
serde_json = "1"

[[test]]
name = "acceptance"
harness = false
