[package]
name = "pseudoscript-lsp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_lsp"
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
pseudoscript-model = { path = "../pseudoscript-model" }
pseudoscript-format = { path = "../pseudoscript-format" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "lsp"
harness = false
