[package]
name = "pseudoscript-lsp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_lsp"
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
pseudoscript-model = { path = "../pseudoscript-model" }
pseudoscript-lsp-core = { path = "../pseudoscript-lsp-core" }
pseudoscript-format = { path = "../pseudoscript-format" }
pseudoscript-project = { path = "../pseudoscript-project" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
pseudoscript-lsp-core = { path = "../pseudoscript-lsp-core" }
cucumber = "0.21"
futures = "0.3"
tempfile = "3"

[[test]]
name = "lsp"
harness = false
