[package]
name = "pseudoscript-lsp"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_lsp"
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax", version = "0.1.8" }
pseudoscript-model = { path = "../pseudoscript-model", version = "0.1.8" }
pseudoscript-lsp-core = { path = "../pseudoscript-lsp-core", version = "0.1.8" }
pseudoscript-format = { path = "../pseudoscript-format", version = "0.1.8" }
pseudoscript-project = { path = "../pseudoscript-project", version = "0.1.8" }
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
pseudoscript-lsp-core = { path = "../pseudoscript-lsp-core", version = "0.1.8" }
cucumber = "0.21"
futures = "0.3"
tempfile = "3"

[[test]]
name = "lsp"
harness = false
