[package]
name = "pseudoscript-model"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_model"
path = "src/lib.rs"

[dependencies]
# Logging facade (target-agnostic); the subscriber is chosen at the wasm/stdio edge.
tracing = "0.1"
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
anyhow = "1"
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
strsim = "0.11"
toml = "0.8"

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "conformance"
harness = false
