[package]
name = "pseudoscript-syntax"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_syntax"
path = "src/lib.rs"

[dependencies]
# Logging facade (target-agnostic); the subscriber is chosen at the wasm/stdio edge.
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
cucumber = "0.21"
futures = "0.3"

[[test]]
name = "conformance"
harness = false
