# The 3D "software universe" layout engine — an isolated crate so its (future)
# AGPL force-simulation dependency stays confined here and never propagates into
# the web-IDE or Svelte crates (handover spec §12). Pure: no rendering, no
# threading assumptions, no third-party layout types in the public API; compiles
# to both native and wasm32. Named `pseudoscript-universe` (not `layout`) to avoid
# clashing with the existing 2D `pseudoscript-layout` crate.
[package]
name = "pseudoscript-universe"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_universe"
path = "src/lib.rs"

[dependencies]
# The resolved C4 model — the same source of truth the 2D view consumes. WASM-safe.
pseudoscript-model = { path = "../pseudoscript-model" }
# The containment tree + relationship graph. MIT/Apache, WASM-safe; keeps an `fdg`
# swap of the force engine trivial later (spec §2).
petgraph = "0.6"
