# The software-graph model for the 3D relationship view — an isolated, pure crate:
# no rendering, no layout (the renderer lays out with d3-force-3d client-side), no
# third-party types in its public API; compiles to both native and wasm32.
[package]
name = "pseudoscript-universe"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_universe"
path = "src/lib.rs"

[dependencies]
# The resolved C4 model — the same source of truth the 2D view consumes. WASM-safe.
pseudoscript-model = { path = "../pseudoscript-model", version = "0.1.6" }
# Sequence projection for the entry-point flow tracer. WASM-safe; no cycle —
# emit depends only on model/layout/dot.
pseudoscript-emit = { path = "../pseudoscript-emit", version = "0.1.6" }
# The containment tree + relationship graph. MIT/Apache, WASM-safe.
petgraph = "0.6"
# Serialises the graph snapshot the renderer consumes.
serde = { version = "1", features = ["derive"] }
