[package]
name = "pseudoscript-wasm"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pseudoscript_wasm"
# `cdylib` is the wasm artifact (compiled with `--target wasm32-unknown-unknown`
# + `wasm-bindgen`); `rlib` keeps it usable as a normal Rust dependency and lets
# the workspace build/test it on the host.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
pseudoscript-format = { path = "../pseudoscript-format" }
pseudoscript-model = { path = "../pseudoscript-model" }
pseudoscript-emit = { path = "../pseudoscript-emit" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

# Browser-grade panic messages, wasm-only (the hook touches the JS console).
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
