[package]
name = "pseudoscript"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "pds"
path = "src/main.rs"

[dependencies]
pseudoscript-syntax = { path = "../pseudoscript-syntax" }
pseudoscript-model = { path = "../pseudoscript-model" }
pseudoscript-format = { path = "../pseudoscript-format" }
pseudoscript-emit = { path = "../pseudoscript-emit" }
pseudoscript-lsp = { path = "../pseudoscript-lsp" }
pseudoscript-doc = { path = "../pseudoscript-doc" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
anyhow = "1"
toml = "0.8"
toml_edit = "0.22"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
tiny_http = "0.12"
notify = "6"
ureq = "2"
serde_json = "1"
sha2 = "0.10"
self-replace = "1"

[target.'cfg(not(windows))'.dependencies]
flate2 = "1"
tar = "0.4"

[target.'cfg(windows)'.dependencies]
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2"
cucumber = "0.21"
futures = "0.3"
tempfile = "3"

[[test]]
name = "cli"
harness = false
